06-WEB/0x08-SecondOrder-H/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: second-order
  labels:
    app: second-order
spec:
  ports:
    - name: http-port
      port: 5000
  selector:
    app: second-order
